[package]
name = "quickjs-canvas"
version = "0.1.0"
authors = ["kirjavascript"]
edition = "2018"

[dependencies]
quick-js = "0.4.0"
gumdrop = "0.8.0"
css-color = "0.1"
sdl2 = { version = "0.34.3", features = ["gfx"] }
sdl2-unifont = { path = "./sdl2-unifont", features = ["plane-1"] } # modified to ensure sdl2_sys is in sync
